# ypf-data-comp

./: .gitignore  01_xgboost-target-encoding.ipynb  02_xgboost-az-encoding.ipynb  03_xgboost-smoothing-param-01.ipynb  04_xgboost-median-smoothing.ipynb  EDA-profiling.ipynb  EDA.ipynb  README.md  pyproject.toml
experiments/01_xgboost-target-encoding/: predicciones.csv  xgb-model
experiments/02_xgboost-az-encoding/: predicciones.csv  xgb-model
experiments/03_xgboost-smoothing-param-01/: predicciones.csv  xgb-model
experiments/04_xgboost-holdout-set/: predicciones.csv  xgb-model
